--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "next-auth": "^5.0.0-beta.25",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.2",
     "npm": "^11.3.0",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
