--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@tanstack/react-table": "^8.21.3",
     "@uploadthing/react": "^7.3.0",
     "bcrypt-ts-edge": "^3.0.1",
@@ -76,6 +78,7 @@
     "recharts": "^2.15.3",
     "slugify": "^1.6.6",
     "sonner": "^2.0.3",
+    "stripe": "^18.1.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
