--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "postinstall": "prisma generate",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "email": "email dev --dir src/email --port 3001"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
@@ -45,6 +46,7 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@react-email/components": "^0.0.40",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.0",
     "@tanstack/react-table": "^8.21.3",
@@ -72,10 +74,12 @@
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-email": "^4.0.13",
     "react-hook-form": "^7.56.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.3",
+    "resend": "^4.5.1",
     "slugify": "^1.6.6",
     "sonner": "^2.0.3",
     "stripe": "^18.1.0",
