--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "bcrypt-ts-edge": "^3.0.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -77,6 +78,7 @@
     "react-email": "^4.0.13",
     "react-hook-form": "^7.56.0",
     "react-icons": "^5.5.0",
+    "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.3",
     "resend": "^4.5.1",
@@ -100,6 +102,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-phone-number-input": "^3.0.17",
     "@types/ws": "^8.18.1",
     "autoprefixer": "^10.4.21",
     "bufferutil": "^4.0.9",
